fix : slider on tablet do not show correctly

--- a/css/slider/slider.css
+++ b/css/slider/slider.css
@@ -26,6 +26,7 @@
     object-fit: cover;
     box-shadow: 1px 1px 15px 5px rgba(0, 0, 0, 0.7);
     border-radius: 10px;
+    min-width: 300px;
     width: 100%;
     aspect-ratio: 16/9;
 }
